Changed CSS for tablets, fixed overflow issue

--- a/assets/bootstrap/css/styles.css
+++ b/assets/bootstrap/css/styles.css
@@ -310,7 +310,6 @@
     height: 800px;
     width: 100%;
     margin-top: 100px;
-    margin-left: 90px ;
   }
   
 
@@ -331,10 +330,10 @@
 
   #parallax-wrapper {
     position: relative;
-    height: 800px;
+    height: 700px;
     width: 100%;
     margin-top: 100px;
-    margin-left: 100px;
+    margin-left: 50px;
   }
   
 
